Bug 99361 - Engineering notation: wrong Help tips in Number dialog and Sidebar
Summary: Engineering notation: wrong Help tips in Number dialog and Sidebar
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
5.0.0.1 rc
Hardware: All All
: medium minor
Assignee: Laurent Balland
URL:
Whiteboard: target:5.2.0
Keywords:
Depends on:
Blocks:
 
Reported: 2016-04-17 08:56 UTC by Laurent Balland
Modified: 2016-10-25 19:07 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Laurent Balland 2016-04-17 08:56:54 UTC
Description: When mouse fly over "Engineering notation" checkbox in Number dialog or in Sidebar, help tips text correspond to "Thousands separator"

Steps to reproduce:
1. Tools > Options > LibreOffice > General: check Extended tips
2. In Calc, Format > Cells > Numbers
3. Select Scientific Category
4. Put mouse over "Engineering notation" checkbox

Actual behavior:
Help tips text displays information about "Thousands separator" checkbox

Expected behavior:
Help tips text should be specific, like in Help:
"With scientific format, Engineering notation ensures that exponent is a multiple of 3."

Same apply with Sidebar, with or without Extended tips option checked:
1. In Calc, open Sidebar, Properties panel > Number Format
2. Select Scientific as Category
3. Put mouse over "Engineering notation" checkbox

Actual behavior:
Help tips text displays information about "Thousands separator" checkbox

Expected behavior:
Help tips text should be specific:
"Ensures that exponent is a multiple of 3."
Comment 1 Commit Notification 2016-04-20 13:36:07 UTC
Laurent Balland-Poirier committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=b24cc067695d7986f231303218e7b853d827b316

tdf#99361 Separate checkbox in Number dialog

It will be available in 5.2.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 2 Commit Notification 2016-04-20 14:29:12 UTC
Laurent Balland-Poirier committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=cbae4ec3c9733c16ae69cfc5a23c9a54aadc7fc3

tdf#99361 Separate checkbox in Sidebar

It will be available in 5.2.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.