tdf#99361 Separate checkbox in Sidebar

"Thousands Separator" and "Engineering notation" used the same checkbox,
 so help tips texts were the same.
This commit creates a second checkbox which is hiden/shown
 according to category selected

Change-Id: I804c2c7b4625497da8e423a952b357fbd8bbfa19