sc/source/ui/sidebar/NumberFormatPropertyPanel.cxx
@@ -20,7 +20,6 @@
 #include <sfx2/sidebar/ResourceDefinitions.hrc>
 #include <sfx2/sidebar/ControlFactory.hxx>
 #include "NumberFormatPropertyPanel.hxx"
-#include <NumberFormatPropertyPanel.hrc>
 #include "sc.hrc"
 #include "scresid.hxx"
 #include <sfx2/bindings.hxx>
@@ -43,8 +42,6 @@ NumberFormatPropertyPanel::NumberFormatPropertyPanel(
     const css::uno::Reference<css::frame::XFrame>& rxFrame,
     SfxBindings* pBindings)
   : PanelLayout(pParent,"NumberFormatPropertyPanel", "modules/scalc/ui/sidebarnumberformat.ui", rxFrame),
-    maThousandSeparator(ScResId(RID_SFX_STR_THOUSAND_SEP)),
-    maEngineeringNotation(ScResId(RID_SFX_STR_ENGINEERING)),
     maNumFormatControl(SID_NUMBER_TYPE_FORMAT, *pBindings, *this),
     maFormatControl(SID_NUMBER_FORMAT, *pBindings, *this),
 
@@ -52,12 +49,13 @@ NumberFormatPropertyPanel::NumberFormatPropertyPanel(
     maContext(),
     mpBindings(pBindings)
 {
-    get(mpLbCategory,   "category");
-    get(mpTBCategory,   "numberformat");
-    get(mpEdDecimals,   "decimalplaces");
-    get(mpEdLeadZeroes, "leadingzeroes");
-    get(mpBtnNegRed,    "negativenumbersred");
-    get(mpBtnThousand,  "thousandseparator");
+    get(mpLbCategory,     "category");
+    get(mpTBCategory,     "numberformat");
+    get(mpEdDecimals,     "decimalplaces");
+    get(mpEdLeadZeroes,   "leadingzeroes");
+    get(mpBtnNegRed,      "negativenumbersred");
+    get(mpBtnThousand,    "thousandseparator");
+    get(mpBtnEngineering, "engineeringnotation");
 
     Initialize();
 }
@@ -75,6 +73,7 @@ void NumberFormatPropertyPanel::dispose()
     mpEdLeadZeroes.clear();
     mpBtnNegRed.clear();
     mpBtnThousand.clear();
+    mpBtnEngineering.clear();
 
     maNumFormatControl.dispose();
     maFormatControl.dispose();
@@ -98,6 +97,7 @@ void NumberFormatPropertyPanel::Initialize()
 
     mpBtnNegRed->SetClickHdl( LINK(this, NumberFormatPropertyPanel, NumFormatValueClickHdl) );
     mpBtnThousand->SetClickHdl( LINK(this, NumberFormatPropertyPanel, NumFormatValueClickHdl) );
+    mpBtnEngineering->SetClickHdl( LINK(this, NumberFormatPropertyPanel, NumFormatValueClickHdl) );
 
     mpTBCategory->SetAccessibleRelationLabeledBy(mpTBCategory);
 }
@@ -120,16 +120,15 @@ IMPL_LINK_NOARG_TYPED( NumberFormatPropertyPanel, NumFormatValueClickHdl, Button
 }
 IMPL_LINK_NOARG_TYPED( NumberFormatPropertyPanel, NumFormatValueHdl, Edit&, void )
 {
-    OUString      aFormat;
-    OUString      sBreak = ",";
-    bool          bThousand     =    mpBtnThousand->IsEnabled()
-        && mpBtnThousand->IsChecked();
-    bool          bNegRed       =    mpBtnNegRed->IsEnabled()
-        && mpBtnNegRed->IsChecked();
-    sal_uInt16        nPrecision    = (mpEdDecimals->IsEnabled())
+    OUString    aFormat;
+    OUString    sBreak = ",";
+    bool        bThousand   = ( mpBtnThousand->IsVisible() && mpBtnThousand->IsEnabled() && mpBtnThousand->IsChecked() )
+                           || ( mpBtnEngineering->IsVisible() && mpBtnEngineering->IsEnabled() && mpBtnEngineering->IsChecked() );
+    bool        bNegRed     =  mpBtnNegRed->IsEnabled() && mpBtnNegRed->IsChecked();
+    sal_uInt16  nPrecision  = (mpEdDecimals->IsEnabled())
         ? (sal_uInt16)mpEdDecimals->GetValue()
         : (sal_uInt16)0;
-    sal_uInt16        nLeadZeroes   = (mpEdLeadZeroes->IsEnabled())
+    sal_uInt16  nLeadZeroes = (mpEdLeadZeroes->IsEnabled())
         ? (sal_uInt16)mpEdLeadZeroes->GetValue()
         : (sal_uInt16)0;
 
@@ -207,25 +206,36 @@ void NumberFormatPropertyPanel::NotifyItemUpdate(
                 if( nVal < 4 ||  // General, Number, Percent and Currency
                     nVal == 6 )  // scientific also
                 {
-                    mpBtnThousand->Enable();
+                    if ( nVal == 6 ) // scientific
+                    {  // For scientific, Thousand separator is replaced by Engineering notation
+                        mpBtnThousand->Hide();
+                        mpBtnEngineering->Show();
+                        mpBtnEngineering->Enable();
+                    }
+                    else
+                    {
+                        mpBtnEngineering->Hide();
+                        mpBtnThousand->Show();
+                        mpBtnThousand->Enable();
+                    }
                     mpBtnNegRed->Enable();
                     mpEdDecimals->Enable();
                     mpEdLeadZeroes->Enable();
                 }
                 else
                 {
+                    mpBtnEngineering->Hide();
+                    mpBtnThousand->Show();
                     mpBtnThousand->Disable();
                     mpBtnNegRed->Disable();
                     mpEdDecimals->Disable();
                     mpEdLeadZeroes->Disable();
                 }
-                if( nVal == 6 ) // For scientific, Thousand separator is replaced by Engineering notation
-                    mpBtnThousand->SetText( maEngineeringNotation );
-                else
-                    mpBtnThousand->SetText( maThousandSeparator );
             }
             else
             {
+                mpBtnEngineering->Hide();
+                mpBtnThousand->Show();
                 mpLbCategory->SetNoSelection();
                 mnCategorySelected = 0;
                 mpBtnThousand->Disable();
@@ -265,7 +275,10 @@ void NumberFormatPropertyPanel::NotifyItemUpdate(
                 nPrecision  =    0;
                 nLeadZeroes =    1;
             }
-            mpBtnThousand->Check(bThousand);
+            if ( mpBtnThousand->IsVisible() )
+                mpBtnThousand->Check(bThousand);
+            else if ( mpBtnEngineering->IsVisible() )
+                mpBtnEngineering->Check(bThousand);
             mpBtnNegRed->Check(bNegRed);
             if ( mpLbCategory->GetSelectEntryPos() == 0 )
                 mpEdDecimals->SetText(""); // tdf#44399
