sc/source/ui/sidebar/NumberFormatPropertyPanel.hxx
@@ -71,9 +71,7 @@ private:
     VclPtr<NumericField>                           mpEdLeadZeroes;
     VclPtr<CheckBox>                               mpBtnNegRed;
     VclPtr<CheckBox>                               mpBtnThousand;
-
-    OUString                                maThousandSeparator;
-    OUString                                maEngineeringNotation;
+    VclPtr<CheckBox>                               mpBtnEngineering;
 
     ::sfx2::sidebar::ControllerItem         maNumFormatControl;
     ::sfx2::sidebar::ControllerItem         maFormatControl;
